@@ -308,12 +308,12 @@ char sBulletDNAstr[]= {
 98,116,83,111,102,116,66,111,100,121,70,108,111,97,116,68,97,116,97,0,
 84,76,69,78,1,0,1,0,2,0,2,0,4,0,4,0,4,0,4,0,
 8,0,0,0,12,0,36,0,8,0,16,0,32,0,48,0,96,0,64,0,
--128,0,20,0,48,0,80,0,16,0,84,0,-124,0,12,0,52,0,52,0,
+128,0,20,0,48,0,80,0,16,0,84,0,132,0,12,0,52,0,52,0,
 20,0,64,0,4,0,4,0,8,0,4,0,32,0,28,0,60,0,56,0,
-76,0,76,0,24,0,60,0,60,0,16,0,64,0,68,0,-56,1,-8,0,
--32,1,-104,3,8,0,52,0,0,0,84,0,116,0,92,1,-36,0,-44,0,
--4,0,92,1,-52,0,16,0,100,0,20,0,36,0,100,0,92,0,104,0,
--64,0,92,1,104,0,-92,1,83,84,82,67,61,0,0,0,10,0,3,0,
+76,0,76,0,24,0,60,0,60,0,16,0,64,0,68,0,200,1,248,0,
+224,1,152,3,8,0,52,0,0,0,84,0,116,0,92,1,220,0,212,0,
+252,0,92,1,204,0,16,0,100,0,20,0,36,0,100,0,92,0,104,0,
+192,0,92,1,104,0,164,1,83,84,82,67,61,0,0,0,10,0,3,0,
 4,0,0,0,4,0,1,0,9,0,2,0,11,0,3,0,10,0,3,0,
 10,0,4,0,10,0,5,0,12,0,2,0,9,0,6,0,9,0,7,0,
 13,0,1,0,7,0,8,0,14,0,1,0,8,0,8,0,15,0,1,0,
@@ -361,52 +361,52 @@ char sBulletDNAstr[]= {
 7,0,110,0,7,0,111,0,7,0,112,0,7,0,113,0,7,0,114,0,
 4,0,115,0,4,0,116,0,4,0,117,0,4,0,118,0,4,0,119,0,
 4,0,120,0,4,0,121,0,48,0,21,0,47,0,122,0,15,0,123,0,
-13,0,124,0,13,0,125,0,13,0,126,0,13,0,127,0,13,0,-128,0,
-13,0,-127,0,13,0,-126,0,13,0,-125,0,13,0,-124,0,7,0,-123,0,
-7,0,-122,0,7,0,-121,0,7,0,-120,0,7,0,-119,0,7,0,-118,0,
-7,0,-117,0,7,0,-116,0,7,0,-115,0,4,0,-114,0,49,0,22,0,
+13,0,124,0,13,0,125,0,13,0,126,0,13,0,127,0,13,0,128,0,
+13,0,129,0,13,0,130,0,13,0,131,0,13,0,132,0,7,0,133,0,
+7,0,134,0,7,0,135,0,7,0,136,0,7,0,137,0,7,0,138,0,
+7,0,139,0,7,0,140,0,7,0,141,0,4,0,142,0,49,0,22,0,
 46,0,122,0,16,0,123,0,14,0,124,0,14,0,125,0,14,0,126,0,
-14,0,127,0,14,0,-128,0,14,0,-127,0,14,0,-126,0,14,0,-125,0,
-14,0,-124,0,8,0,-123,0,8,0,-122,0,8,0,-121,0,8,0,-120,0,
-8,0,-119,0,8,0,-118,0,8,0,-117,0,8,0,-116,0,8,0,-115,0,
-4,0,-114,0,0,0,37,0,50,0,2,0,4,0,-113,0,4,0,-112,0,
-51,0,13,0,52,0,-111,0,52,0,-110,0,0,0,35,0,4,0,-109,0,
-4,0,-108,0,4,0,-107,0,4,0,-106,0,7,0,-105,0,7,0,-104,0,
-4,0,-103,0,4,0,-102,0,7,0,-101,0,4,0,-100,0,53,0,3,0,
-51,0,-99,0,13,0,-98,0,13,0,-97,0,54,0,3,0,51,0,-99,0,
-14,0,-98,0,14,0,-97,0,55,0,13,0,51,0,-99,0,18,0,-96,0,
-18,0,-95,0,4,0,-94,0,4,0,-93,0,4,0,-92,0,7,0,-91,0,
-7,0,-90,0,7,0,-89,0,7,0,-88,0,7,0,-87,0,7,0,-86,0,
-7,0,-85,0,56,0,13,0,51,0,-99,0,17,0,-96,0,17,0,-95,0,
-4,0,-94,0,4,0,-93,0,4,0,-92,0,7,0,-91,0,7,0,-90,0,
-7,0,-89,0,7,0,-88,0,7,0,-87,0,7,0,-86,0,7,0,-85,0,
-57,0,11,0,51,0,-99,0,17,0,-96,0,17,0,-95,0,7,0,-84,0,
-7,0,-83,0,7,0,-82,0,7,0,-87,0,7,0,-86,0,7,0,-85,0,
-7,0,-81,0,0,0,21,0,58,0,9,0,51,0,-99,0,17,0,-96,0,
-17,0,-95,0,13,0,-80,0,13,0,-79,0,13,0,-78,0,13,0,-77,0,
-4,0,-76,0,4,0,-75,0,59,0,5,0,58,0,-74,0,4,0,-73,0,
-7,0,-72,0,7,0,-71,0,7,0,-70,0,60,0,9,0,51,0,-99,0,
-17,0,-96,0,17,0,-95,0,7,0,-80,0,7,0,-79,0,7,0,-78,0,
-7,0,-77,0,4,0,-76,0,4,0,-75,0,61,0,4,0,7,0,-69,0,
-7,0,-68,0,7,0,-67,0,4,0,78,0,62,0,10,0,61,0,-66,0,
-13,0,-65,0,13,0,-64,0,13,0,-63,0,13,0,-62,0,13,0,-61,0,
-7,0,-123,0,7,0,-60,0,4,0,-59,0,4,0,53,0,63,0,4,0,
-61,0,-66,0,4,0,-58,0,7,0,-57,0,4,0,-56,0,64,0,4,0,
-13,0,-61,0,61,0,-66,0,4,0,-55,0,7,0,-54,0,65,0,7,0,
-13,0,-53,0,61,0,-66,0,4,0,-52,0,7,0,-51,0,7,0,-50,0,
-7,0,-49,0,4,0,53,0,66,0,6,0,15,0,-48,0,13,0,-50,0,
-13,0,-47,0,52,0,-46,0,4,0,-45,0,7,0,-49,0,67,0,26,0,
-4,0,-44,0,7,0,-43,0,7,0,-81,0,7,0,-42,0,7,0,-41,0,
-7,0,-40,0,7,0,-39,0,7,0,-38,0,7,0,-37,0,7,0,-36,0,
-7,0,-35,0,7,0,-34,0,7,0,-33,0,7,0,-32,0,7,0,-31,0,
-7,0,-30,0,7,0,-29,0,7,0,-28,0,7,0,-27,0,7,0,-26,0,
-7,0,-25,0,4,0,-24,0,4,0,-23,0,4,0,-22,0,4,0,-21,0,
-4,0,116,0,68,0,12,0,15,0,-20,0,15,0,-19,0,15,0,-18,0,
-13,0,-17,0,13,0,-16,0,7,0,-15,0,4,0,-14,0,4,0,-13,0,
-4,0,-12,0,4,0,-11,0,7,0,-51,0,4,0,53,0,69,0,27,0,
-17,0,-10,0,15,0,-9,0,15,0,-8,0,13,0,-17,0,13,0,-7,0,
-13,0,-6,0,13,0,-5,0,13,0,-4,0,13,0,-3,0,4,0,-2,0,
-7,0,-1,0,4,0,0,1,4,0,1,1,4,0,2,1,7,0,3,1,
+14,0,127,0,14,0,128,0,14,0,129,0,14,0,130,0,14,0,131,0,
+14,0,132,0,8,0,133,0,8,0,134,0,8,0,135,0,8,0,136,0,
+8,0,137,0,8,0,138,0,8,0,139,0,8,0,140,0,8,0,141,0,
+4,0,142,0,0,0,37,0,50,0,2,0,4,0,143,0,4,0,144,0,
+51,0,13,0,52,0,145,0,52,0,146,0,0,0,35,0,4,0,147,0,
+4,0,148,0,4,0,149,0,4,0,150,0,7,0,151,0,7,0,152,0,
+4,0,153,0,4,0,154,0,7,0,155,0,4,0,156,0,53,0,3,0,
+51,0,157,0,13,0,158,0,13,0,159,0,54,0,3,0,51,0,157,0,
+14,0,158,0,14,0,159,0,55,0,13,0,51,0,157,0,18,0,160,0,
+18,0,161,0,4,0,162,0,4,0,163,0,4,0,164,0,7,0,165,0,
+7,0,166,0,7,0,167,0,7,0,168,0,7,0,169,0,7,0,170,0,
+7,0,171,0,56,0,13,0,51,0,157,0,17,0,160,0,17,0,161,0,
+4,0,162,0,4,0,163,0,4,0,164,0,7,0,165,0,7,0,166,0,
+7,0,167,0,7,0,168,0,7,0,169,0,7,0,170,0,7,0,171,0,
+57,0,11,0,51,0,157,0,17,0,160,0,17,0,161,0,7,0,172,0,
+7,0,173,0,7,0,174,0,7,0,169,0,7,0,170,0,7,0,171,0,
+7,0,175,0,0,0,21,0,58,0,9,0,51,0,157,0,17,0,160,0,
+17,0,161,0,13,0,176,0,13,0,177,0,13,0,178,0,13,0,179,0,
+4,0,180,0,4,0,181,0,59,0,5,0,58,0,182,0,4,0,183,0,
+7,0,184,0,7,0,185,0,7,0,186,0,60,0,9,0,51,0,157,0,
+17,0,160,0,17,0,161,0,7,0,176,0,7,0,177,0,7,0,178,0,
+7,0,179,0,4,0,180,0,4,0,181,0,61,0,4,0,7,0,187,0,
+7,0,188,0,7,0,189,0,4,0,78,0,62,0,10,0,61,0,190,0,
+13,0,191,0,13,0,192,0,13,0,193,0,13,0,194,0,13,0,195,0,
+7,0,133,0,7,0,196,0,4,0,197,0,4,0,53,0,63,0,4,0,
+61,0,190,0,4,0,198,0,7,0,199,0,4,0,200,0,64,0,4,0,
+13,0,195,0,61,0,190,0,4,0,201,0,7,0,202,0,65,0,7,0,
+13,0,203,0,61,0,190,0,4,0,204,0,7,0,205,0,7,0,206,0,
+7,0,207,0,4,0,53,0,66,0,6,0,15,0,208,0,13,0,206,0,
+13,0,209,0,52,0,210,0,4,0,211,0,7,0,207,0,67,0,26,0,
+4,0,212,0,7,0,213,0,7,0,175,0,7,0,214,0,7,0,215,0,
+7,0,216,0,7,0,217,0,7,0,218,0,7,0,219,0,7,0,220,0,
+7,0,221,0,7,0,222,0,7,0,223,0,7,0,224,0,7,0,225,0,
+7,0,226,0,7,0,227,0,7,0,228,0,7,0,229,0,7,0,230,0,
+7,0,231,0,4,0,232,0,4,0,233,0,4,0,234,0,4,0,235,0,
+4,0,116,0,68,0,12,0,15,0,236,0,15,0,237,0,15,0,238,0,
+13,0,239,0,13,0,240,0,7,0,241,0,4,0,242,0,4,0,243,0,
+4,0,244,0,4,0,245,0,7,0,205,0,4,0,53,0,69,0,27,0,
+17,0,246,0,15,0,247,0,15,0,248,0,13,0,239,0,13,0,249,0,
+13,0,250,0,13,0,251,0,13,0,252,0,13,0,253,0,4,0,254,0,
+7,0,255,0,4,0,0,1,4,0,1,1,4,0,2,1,7,0,3,1,
 7,0,4,1,4,0,5,1,4,0,6,1,7,0,7,1,7,0,8,1,
 7,0,9,1,7,0,10,1,7,0,11,1,7,0,12,1,4,0,13,1,
 4,0,14,1,4,0,15,1,70,0,12,0,9,0,16,1,9,0,17,1,
@@ -419,7 +419,7 @@ char sBulletDNAstr[]= {
 };
 int sBulletDNAlen= sizeof(sBulletDNAstr);
 
- char sBulletDNAstr64[]= {
+char sBulletDNAstr64[]= {
 83,68,78,65,78,65,77,69,44,1,0,0,109,95,115,105,122,101,0,109,
 95,99,97,112,97,99,105,116,121,0,42,109,95,100,97,116,97,0,109,95,
 99,111,108,108,105,115,105,111,110,83,104,97,112,101,115,0,109,95,99,111,
@@ -729,12 +729,12 @@ int sBulletDNAlen= sizeof(sBulletDNAstr);
 98,116,83,111,102,116,66,111,100,121,70,108,111,97,116,68,97,116,97,0,
 84,76,69,78,1,0,1,0,2,0,2,0,4,0,4,0,4,0,4,0,
 8,0,0,0,16,0,48,0,16,0,16,0,32,0,48,0,96,0,64,0,
--128,0,20,0,48,0,80,0,16,0,96,0,-112,0,16,0,56,0,56,0,
+128,0,20,0,48,0,80,0,16,0,96,0,144,0,16,0,56,0,56,0,
 20,0,72,0,4,0,4,0,8,0,4,0,56,0,32,0,80,0,72,0,
-96,0,80,0,32,0,64,0,64,0,16,0,72,0,80,0,-40,1,8,1,
--16,1,-88,3,8,0,64,0,0,0,96,0,-128,0,104,1,-24,0,-32,0,
-8,1,104,1,-40,0,16,0,104,0,24,0,40,0,104,0,96,0,104,0,
--56,0,104,1,112,0,-40,1,83,84,82,67,61,0,0,0,10,0,3,0,
+96,0,80,0,32,0,64,0,64,0,16,0,72,0,80,0,216,1,8,1,
+240,1,168,3,8,0,64,0,0,0,96,0,128,0,104,1,232,0,224,0,
+8,1,104,1,216,0,16,0,104,0,24,0,40,0,104,0,96,0,104,0,
+200,0,104,1,112,0,216,1,83,84,82,67,61,0,0,0,10,0,3,0,
 4,0,0,0,4,0,1,0,9,0,2,0,11,0,3,0,10,0,3,0,
 10,0,4,0,10,0,5,0,12,0,2,0,9,0,6,0,9,0,7,0,
 13,0,1,0,7,0,8,0,14,0,1,0,8,0,8,0,15,0,1,0,
@@ -782,52 +782,52 @@ int sBulletDNAlen= sizeof(sBulletDNAstr);
 7,0,110,0,7,0,111,0,7,0,112,0,7,0,113,0,7,0,114,0,
 4,0,115,0,4,0,116,0,4,0,117,0,4,0,118,0,4,0,119,0,
 4,0,120,0,4,0,121,0,48,0,21,0,47,0,122,0,15,0,123,0,
-13,0,124,0,13,0,125,0,13,0,126,0,13,0,127,0,13,0,-128,0,
-13,0,-127,0,13,0,-126,0,13,0,-125,0,13,0,-124,0,7,0,-123,0,
-7,0,-122,0,7,0,-121,0,7,0,-120,0,7,0,-119,0,7,0,-118,0,
-7,0,-117,0,7,0,-116,0,7,0,-115,0,4,0,-114,0,49,0,22,0,
+13,0,124,0,13,0,125,0,13,0,126,0,13,0,127,0,13,0,128,0,
+13,0,129,0,13,0,130,0,13,0,131,0,13,0,132,0,7,0,133,0,
+7,0,134,0,7,0,135,0,7,0,136,0,7,0,137,0,7,0,138,0,
+7,0,139,0,7,0,140,0,7,0,141,0,4,0,142,0,49,0,22,0,
 46,0,122,0,16,0,123,0,14,0,124,0,14,0,125,0,14,0,126,0,
-14,0,127,0,14,0,-128,0,14,0,-127,0,14,0,-126,0,14,0,-125,0,
-14,0,-124,0,8,0,-123,0,8,0,-122,0,8,0,-121,0,8,0,-120,0,
-8,0,-119,0,8,0,-118,0,8,0,-117,0,8,0,-116,0,8,0,-115,0,
-4,0,-114,0,0,0,37,0,50,0,2,0,4,0,-113,0,4,0,-112,0,
-51,0,13,0,52,0,-111,0,52,0,-110,0,0,0,35,0,4,0,-109,0,
-4,0,-108,0,4,0,-107,0,4,0,-106,0,7,0,-105,0,7,0,-104,0,
-4,0,-103,0,4,0,-102,0,7,0,-101,0,4,0,-100,0,53,0,3,0,
-51,0,-99,0,13,0,-98,0,13,0,-97,0,54,0,3,0,51,0,-99,0,
-14,0,-98,0,14,0,-97,0,55,0,13,0,51,0,-99,0,18,0,-96,0,
-18,0,-95,0,4,0,-94,0,4,0,-93,0,4,0,-92,0,7,0,-91,0,
-7,0,-90,0,7,0,-89,0,7,0,-88,0,7,0,-87,0,7,0,-86,0,
-7,0,-85,0,56,0,13,0,51,0,-99,0,17,0,-96,0,17,0,-95,0,
-4,0,-94,0,4,0,-93,0,4,0,-92,0,7,0,-91,0,7,0,-90,0,
-7,0,-89,0,7,0,-88,0,7,0,-87,0,7,0,-86,0,7,0,-85,0,
-57,0,11,0,51,0,-99,0,17,0,-96,0,17,0,-95,0,7,0,-84,0,
-7,0,-83,0,7,0,-82,0,7,0,-87,0,7,0,-86,0,7,0,-85,0,
-7,0,-81,0,0,0,21,0,58,0,9,0,51,0,-99,0,17,0,-96,0,
-17,0,-95,0,13,0,-80,0,13,0,-79,0,13,0,-78,0,13,0,-77,0,
-4,0,-76,0,4,0,-75,0,59,0,5,0,58,0,-74,0,4,0,-73,0,
-7,0,-72,0,7,0,-71,0,7,0,-70,0,60,0,9,0,51,0,-99,0,
-17,0,-96,0,17,0,-95,0,7,0,-80,0,7,0,-79,0,7,0,-78,0,
-7,0,-77,0,4,0,-76,0,4,0,-75,0,61,0,4,0,7,0,-69,0,
-7,0,-68,0,7,0,-67,0,4,0,78,0,62,0,10,0,61,0,-66,0,
-13,0,-65,0,13,0,-64,0,13,0,-63,0,13,0,-62,0,13,0,-61,0,
-7,0,-123,0,7,0,-60,0,4,0,-59,0,4,0,53,0,63,0,4,0,
-61,0,-66,0,4,0,-58,0,7,0,-57,0,4,0,-56,0,64,0,4,0,
-13,0,-61,0,61,0,-66,0,4,0,-55,0,7,0,-54,0,65,0,7,0,
-13,0,-53,0,61,0,-66,0,4,0,-52,0,7,0,-51,0,7,0,-50,0,
-7,0,-49,0,4,0,53,0,66,0,6,0,15,0,-48,0,13,0,-50,0,
-13,0,-47,0,52,0,-46,0,4,0,-45,0,7,0,-49,0,67,0,26,0,
-4,0,-44,0,7,0,-43,0,7,0,-81,0,7,0,-42,0,7,0,-41,0,
-7,0,-40,0,7,0,-39,0,7,0,-38,0,7,0,-37,0,7,0,-36,0,
-7,0,-35,0,7,0,-34,0,7,0,-33,0,7,0,-32,0,7,0,-31,0,
-7,0,-30,0,7,0,-29,0,7,0,-28,0,7,0,-27,0,7,0,-26,0,
-7,0,-25,0,4,0,-24,0,4,0,-23,0,4,0,-22,0,4,0,-21,0,
-4,0,116,0,68,0,12,0,15,0,-20,0,15,0,-19,0,15,0,-18,0,
-13,0,-17,0,13,0,-16,0,7,0,-15,0,4,0,-14,0,4,0,-13,0,
-4,0,-12,0,4,0,-11,0,7,0,-51,0,4,0,53,0,69,0,27,0,
-17,0,-10,0,15,0,-9,0,15,0,-8,0,13,0,-17,0,13,0,-7,0,
-13,0,-6,0,13,0,-5,0,13,0,-4,0,13,0,-3,0,4,0,-2,0,
-7,0,-1,0,4,0,0,1,4,0,1,1,4,0,2,1,7,0,3,1,
+14,0,127,0,14,0,128,0,14,0,129,0,14,0,130,0,14,0,131,0,
+14,0,132,0,8,0,133,0,8,0,134,0,8,0,135,0,8,0,136,0,
+8,0,137,0,8,0,138,0,8,0,139,0,8,0,140,0,8,0,141,0,
+4,0,142,0,0,0,37,0,50,0,2,0,4,0,143,0,4,0,144,0,
+51,0,13,0,52,0,145,0,52,0,146,0,0,0,35,0,4,0,147,0,
+4,0,148,0,4,0,149,0,4,0,150,0,7,0,151,0,7,0,152,0,
+4,0,153,0,4,0,154,0,7,0,155,0,4,0,156,0,53,0,3,0,
+51,0,157,0,13,0,158,0,13,0,159,0,54,0,3,0,51,0,157,0,
+14,0,158,0,14,0,159,0,55,0,13,0,51,0,157,0,18,0,160,0,
+18,0,161,0,4,0,162,0,4,0,163,0,4,0,164,0,7,0,165,0,
+7,0,166,0,7,0,167,0,7,0,168,0,7,0,169,0,7,0,170,0,
+7,0,171,0,56,0,13,0,51,0,157,0,17,0,160,0,17,0,161,0,
+4,0,162,0,4,0,163,0,4,0,164,0,7,0,165,0,7,0,166,0,
+7,0,167,0,7,0,168,0,7,0,169,0,7,0,170,0,7,0,171,0,
+57,0,11,0,51,0,157,0,17,0,160,0,17,0,161,0,7,0,172,0,
+7,0,173,0,7,0,174,0,7,0,169,0,7,0,170,0,7,0,171,0,
+7,0,175,0,0,0,21,0,58,0,9,0,51,0,157,0,17,0,160,0,
+17,0,161,0,13,0,176,0,13,0,177,0,13,0,178,0,13,0,179,0,
+4,0,180,0,4,0,181,0,59,0,5,0,58,0,182,0,4,0,183,0,
+7,0,184,0,7,0,185,0,7,0,186,0,60,0,9,0,51,0,157,0,
+17,0,160,0,17,0,161,0,7,0,176,0,7,0,177,0,7,0,178,0,
+7,0,179,0,4,0,180,0,4,0,181,0,61,0,4,0,7,0,187,0,
+7,0,188,0,7,0,189,0,4,0,78,0,62,0,10,0,61,0,190,0,
+13,0,191,0,13,0,192,0,13,0,193,0,13,0,194,0,13,0,195,0,
+7,0,133,0,7,0,196,0,4,0,197,0,4,0,53,0,63,0,4,0,
+61,0,190,0,4,0,198,0,7,0,199,0,4,0,200,0,64,0,4,0,
+13,0,195,0,61,0,190,0,4,0,201,0,7,0,202,0,65,0,7,0,
+13,0,203,0,61,0,190,0,4,0,204,0,7,0,205,0,7,0,206,0,
+7,0,207,0,4,0,53,0,66,0,6,0,15,0,208,0,13,0,206,0,
+13,0,209,0,52,0,210,0,4,0,211,0,7,0,207,0,67,0,26,0,
+4,0,212,0,7,0,213,0,7,0,175,0,7,0,214,0,7,0,215,0,
+7,0,216,0,7,0,217,0,7,0,218,0,7,0,219,0,7,0,220,0,
+7,0,221,0,7,0,222,0,7,0,223,0,7,0,224,0,7,0,225,0,
+7,0,226,0,7,0,227,0,7,0,228,0,7,0,229,0,7,0,230,0,
+7,0,231,0,4,0,232,0,4,0,233,0,4,0,234,0,4,0,235,0,
+4,0,116,0,68,0,12,0,15,0,236,0,15,0,237,0,15,0,238,0,
+13,0,239,0,13,0,240,0,7,0,241,0,4,0,242,0,4,0,243,0,
+4,0,244,0,4,0,245,0,7,0,205,0,4,0,53,0,69,0,27,0,
+17,0,246,0,15,0,247,0,15,0,248,0,13,0,239,0,13,0,249,0,
+13,0,250,0,13,0,251,0,13,0,252,0,13,0,253,0,4,0,254,0,
+7,0,255,0,4,0,0,1,4,0,1,1,4,0,2,1,7,0,3,1,
 7,0,4,1,4,0,5,1,4,0,6,1,7,0,7,1,7,0,8,1,
 7,0,9,1,7,0,10,1,7,0,11,1,7,0,12,1,4,0,13,1,
 4,0,14,1,4,0,15,1,70,0,12,0,9,0,16,1,9,0,17,1,
